RESOLVED FIXED47945
[Qt] Wrong null check in PopupMenuQt
https://bugs.webkit.org/show_bug.cgi?id=47945
Summary [Qt] Wrong null check in PopupMenuQt
Luiz Agostini
Reported 2010-10-19 16:17:23 PDT
Wrong null check in PopupMenuQt
Attachments
patch (1.50 KB, patch)
2010-10-19 16:24 PDT, Luiz Agostini
no flags
Luiz Agostini
Comment 1 2010-10-19 16:24:11 PDT
WebKit Commit Bot
Comment 2 2010-10-20 01:05:13 PDT
Comment on attachment 71220 [details] patch Clearing flags on attachment: 71220 Committed r70134: <http://trac.webkit.org/changeset/70134>
WebKit Commit Bot
Comment 3 2010-10-20 01:05:18 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 4 2010-10-20 06:18:07 PDT
Removing block:39121, as there's no such check in qtwebkit-2.1. The if clause was introduced as part of the refactoring done on trunk.
Note You need to log in before you can comment on or make changes to this bug.