2010-10-20  Luiz Agostini  <luiz.agostini@openbossa.org>

Reviewed by Antonio Gomes.

        [Qt] Wrong null check in PopupMenuQt
        https://bugs.webkit.org/show_bug.cgi?id=47945

        Wrong null check in PopupMenuQt.

        * WebCoreSupport/PopupMenuQt.cpp:
        (WebCore::PopupMenuQt::hide):

git-svn-id: svn://svn.chromium.org/blink/trunk@70134 bbb929c8-8fbe-4397-9dbb-9b2b20218538