third_party/WebKit/WebKit/qt/WebCoreSupport/PopupMenuQt.cpp
@@ -128,7 +128,7 @@ void PopupMenuQt::didHide()
 
 void PopupMenuQt::hide()
 {
-    if (!m_popup)
+    if (m_popup)
         m_popup->hide();
 }
 
